ai_services/ollama/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai-services
  labels:
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
